Istio/CB/cb-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-cb
spec:
  gateways:
    - cb-gateway
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /circuit
      route:
        - destination:
            host: python-cb
            port:
              number: 9000
            subset: v1
          weight: 100
