Istio/CB/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: python-cb
spec:
  host: python-cb
  subsets:
    - name: v1
      labels:
        version: v1
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
